src/objects/AP_Process_Form__c.object
<CustomObject>
    <fields>
        <fullName>Join_BSP_ECCB__c</fullName>
        <description>Does your Airline wish to join BSP Electronic Credit Card Billing Scheme (ECCB), where BSP produces card clearing files and forwards them to your Acquirer or processor?</description>
        <inlineHelpText>Does your Airline wish to join BSP Electronic Credit Card Billing Scheme (ECCB), where BSP produces card clearing files and forwards them to your Acquirer or processor?</inlineHelpText>
        <label>Join BSP ECCB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Archiving__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Legal Archiving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name_of_account__c</fullName>
        <description>Company legal name for parent account used in SIS Recordtypes</description>
        <label>Legal Name of account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_of_company__c</fullName>
        <description>Company legal name used in SIS Recordtypes</description>
        <label>Legal Name of company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_CC_Settlement_Scheme__c</fullName>
        <label>Local CC / Settlement Scheme?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Card_Merchant_Number__c</fullName>
        <label>Master Card Merchant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Card_Name_of_Acquirer__c</fullName>
        <label>Master Card Name of Acquirer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Commission_Rate__c</fullName>
        <description>Used as maximum value for commission control in a specific BSP market for the airline applying</description>
        <label>Maximum Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Commission_Rate__c</fullName>
        <description>Used as minimum value for commission control in a specific BSP market for the airline applying</description>
        <label>Minimum Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Name_Appearing_in_VAT__c</fullName>
        <label>Name appearing in the RUT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_business_comm_assoc__c</fullName>
        <label>Name of business/comm assoc</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_carrier_in_the_BSP_country__c</fullName>
        <description>Is your airline an online carrier in the BSP concerned of application</description>
        <label>Online carrier in the BSP country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Card_brand_accepted_for_BSP_ticket__c</fullName>
        <description>Which Card brand does your Airline accept for BSP ticket issuance by Travel Agents?</description>
        <label>Other Card brand accepted for BSP ticket</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_TAX_Identification__c</fullName>
        <description>Please specify other TAX Identification (Only if applicable: as required in the BSP Country of application)</description>
        <label>Other TAX Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASSLink_Extra_New_Users__c</fullName>
        <inlineHelpText>On Contacts creation, please put PASS User as the Job Title</inlineHelpText>
        <label>PASSLink Extra New Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_File_Recipient_Email_1__c</fullName>
        <label>PDF File Recipient Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDF_File_Recipient_Email_2__c</fullName>
        <label>PDF File Recipient Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDF_File_Recipient_Email_3__c</fullName>
        <label>PDF File Recipient Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDF_Report_Delivery_Format__c</fullName>
        <label>PDF Report Delivery Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not required</fullName>
                </value>
                <value>
                    <fullName>Download Only</fullName>
                </value>
                <value>
                    <fullName>E-mail and Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participate_in_AWB_Stock_Management__c</fullName>
        <label>Participate in AWB Stock Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participate_in_any_Commission_Control__c</fullName>
        <description>Does your Airline wish to participate in any Commission Control?
* If YES, please contact IATA for details</description>
        <label>Participate in any Commission Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participate_in_any_Remit_scheme__c</fullName>
        <description>Does your Airline wish to participate in any Net Remit scheme?
* If YES, please contact IATA for details</description>
        <label>Participate in any Remit scheme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Commission_to_agents__c</fullName>
        <label>Pay Commission to agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Standard_Commission__c</fullName>
        <label>Pay Standard Commission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <description>Postal code used in SIS recordtypes</description>
        <label>Postal code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Cargo_BI_statistics__c</fullName>
        <label>Receive Cargo BI statistics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_HOT_files__c</fullName>
        <description>Does your Airline wish to receive HOT files?</description>
        <label>Receive HOT files</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES - Daily</fullName>
                </value>
                <value>
                    <fullName>YES - Per Period</fullName>
                </value>
                <value>
                    <fullName>YES - Billing Period HOT</fullName>
                </value>
                <value>
                    <fullName>YES - Remittance Period HOT</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_PDF_Reports__c</fullName>
        <description>Does your Airline wish to receive PDF reports?</description>
        <label>Receive PDF Reports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_XLS_Reports__c</fullName>
        <label>Receive XLS Reports</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIS_Contact_Email__c</fullName>
        <description>SIS Contact Email</description>
        <label>SIS Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_F_Name__c</fullName>
        <description>SIS Contact First Name</description>
        <label>SIS Contact F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_Job_Title__c</fullName>
        <description>SIS Contact Job Title</description>
        <label>SIS Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_L_Name__c</fullName>
        <description>SIS Contact Last Name</description>
        <label>SIS Contact L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_Number__c</fullName>
        <description>SIS Contact phone number</description>
        <label>SIS Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Select_Bank_Account__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Select Bank Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Account</fullName>
                    <label>Use a new Bank Account</label>
                </value>
                <value>
                    <fullName>ICH Account</fullName>
                    <label>Use my ICH bank account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIS_Contact_Email__c</fullName>
        <label>SIS Contact Email</label>
        <description>SIS Contact Email</description>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_F_Name__c</fullName>
        <label>SIS Contact F Name</label>
        <description>SIS Contact First Name</description>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_Job_Title__c</fullName>
        <label>SIS Contact Job Title</label>
        <description>SIS Contact Job Title</description>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_L_Name__c</fullName>
        <label>SIS Contact L Name</label>
        <description>SIS Contact Last Name</description>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Contact_Number__c</fullName>
        <description>SIS Contact phone number</description>
        <label>SIS Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stock_Exchange_Name__c</fullName>
        <description>Confirm on which stock exchange the company is listed</description>
        <label>Stock Exchange Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Email_1__c</fullName>
        <description>First email to add in Stock Management Section in AP Changes</description>
        <label>Stock Management Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Email_2__c</fullName>
        <description>Second email to add in Stock Management Section in AP Changes</description>
        <label>Stock Management Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Email_3__c</fullName>
        <description>Third email to add in Stock Management Section in AP Changes</description>
        <label>Stock Management Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Remove_Email_1__c</fullName>
        <description>First email to remove in Stock Management Section in AP Changes</description>
        <label>Stock Management Remove Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Remove_Email_2__c</fullName>
        <description>Second email to remove in Stock Management Section in AP Changes</description>
        <label>Stock Management Remove Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stock_Management_Remove_Email_3__c</fullName>
        <description>Third email to remove in Stock Management Section in AP Changes</description>
        <label>Stock Management Remove Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitted_to_IATA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted to IATA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_User_Email_Address__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Super_User_Fax_Number__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Super_User_First_Name__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_User_Last_Name__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_User_Mobile_Number__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Super_User_Phone_Number__c</fullName>
        <description>Part of Super User personal information</description>
        <label>Super User Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Super_User_Salutation__c</fullName>
        <description>Part of super user personal info</description>
        <label>Super User Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAX_VAT_Registration_Number__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>TAX/VAT Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Percentage__c</fullName>
        <label>Territory Percentage (Italy)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASS</fullName>
                </value>
                <value>
                    <fullName>BSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Change_Requested__c</fullName>
        <label>Type of Change Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change of Address</fullName>
                    <label>Change of Local Address</label>
                </value>
                <value>
                    <fullName>Tax Number</fullName>
                </value>
                <value>
                    <fullName>Master Table</fullName>
                    <label>Link Master Table</label>
                </value>
                <value>
                    <fullName>Voluntary Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Report Options</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Report_Options__c</fullName>
        <description>Only used when one of the selected values in &apos;Type_of_Change_Requested__c&apos; is &apos;Report Options&apos;</description>
        <label>Type of Report Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOT</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Settlement__c</fullName>
        <description>Please indicate which type of settlement do you want to use for this market?</description>
        <label>Type of Settlement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Bank</fullName>
                    <label>A local bank account (account in the country and currency of the settlement)</label>
                </value>
                <value>
                    <fullName>ICCS bank account</fullName>
                    <label>ICCS bank account (Cross border transfers)</label>
                </value>
                <value>
                    <fullName>Settlement a la carte</fullName>
                    <label>Settlement a la carte (A percentage distribution between local bank account and ICCS bank account)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_participation_desired__c</fullName>
        <label>Type of participation desired</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full (direct participant)</fullName>
                </value>
                <value>
                    <fullName>Weblink</fullName>
                </value>
                <value>
                    <fullName>Airline joining directly</fullName>
                </value>
                <value>
                    <fullName>Airline joining CASS through a GSSA</fullName>
                </value>
                <value>
                    <fullName>IFG</fullName>
                    <label>IFG (IATA Financial Gateway)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_a_new_Bank_Account__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Use a new Bank Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Tax_number_in_your_home_country__c</fullName>
        <description>VAT/Tax number in your home country</description>
        <label>VAT/Tax number in your home country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Name_of_Acquirer_or_Processor__c</fullName>
        <description>Name of Acquirer or Processor</description>
        <label>Visa Name of Acquirer or Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_merchant_number__c</fullName>
        <description>If yes, please provide Merchant number for each card brand accepted and the name of your acquirer or processor to which BSP shall send the data for your card sales:</description>
        <label>Visa merchant number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_requested_to_join_TOU__c</fullName>
        <description>Used for recortype SIS TOU Agent</description>
        <label>Who requested to join TOU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AP Process Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>AP Process Form #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Process Forms</pluralLabel>
    <recordTypes>
        <fullName>BSP_Change</fullName>
        <active>true</active>
        <label>BSP Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>BSP_Joining</fullName>
        <active>true</active>
        <label>BSP Joining</label>
    </recordTypes>
    <recordTypes>
        <fullName>CASS_Change</fullName>
        <active>true</active>
        <label>CASS Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>CASS_Joining</fullName>
        <active>true</active>
        <label>CASS Joining</label>
    </recordTypes>
    <recordTypes>
        <fullName>IATA_EasyPay_Opt_in_Out</fullName>
        <active>true</active>
        <label>IATA EasyPay Opt-in / Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICH_Change</fullName>
        <active>true</active>
        <description>ICH Minor and Bank changes</description>
        <label>ICH Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICH_Joining</fullName>
        <active>true</active>
        <description>Joining Form for IATA Clearing House</description>
        <label>ICH Joining</label>
    </recordTypes>
    <recordTypes>
        <fullName>PASS_Change</fullName>
        <active>true</active>
        <label>PASS Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>PASS_Joining</fullName>
        <active>true</active>
        <label>PASS Joining</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIS_Application_ISPA</fullName>
        <active>true</active>
        <description>Used in SIS Management Application, for ISPA membership</description>
        <label>SIS Application ISPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIS_Application_ISUA</fullName>
        <active>true</active>
        <description>Used in SIS Management Application, for ISUA membership</description>
        <label>SIS Application ISUA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIS_Application_TOU</fullName>
        <active>true</active>
        <description>Used in SIS Management Application, for Terms of use membership</description>
        <label>SIS Application TOU</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANG_AP_Accept_EasyPay_in_BSP</fullName>
        <active>true</active>
        <description>Airlines in Newgen countries when signing into BSP must confirm whether they wish to accept Easy Pay transactions.</description>
        <errorConditionFormula>AND(Submitted_to_IATA__c == TRUE,
RecordType.DeveloperName == &quot;BSP_Joining&quot;,
ANG_Enable_NewGen__c,
ISPICKVAL(ANG_Airline_accepts_EasyPay_tr_in_BSP__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>ANG_Airline_accepts_EasyPay_tr_in_BSP__c</errorDisplayField>
        <errorMessage>Please select whether or not you wish to accept IATA EasyPay transactions in this BSP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_CASS_HOT_File_EmailAddress</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;CASS&quot; &amp;&amp; ISPICKVAL(Hot_files_delivery_format__c, &apos;E-mail and Download&apos;) &amp;&amp;  ISBLANK(HOT_File_Recipient_Email_1__c) &amp;&amp;  ISBLANK(HOT_File_Recipient_Email_2__c) &amp;&amp;  ISBLANK(HOT_File_Recipient_Email_3__c) &amp;&amp;  ISBLANK(HOT_File_Recipient_Email_4__c)</errorConditionFormula>
        <errorDisplayField>HOT_File_Recipient_Email_1__c</errorDisplayField>
        <errorMessage>Please enter at least one email address for the HOT file email distribution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_CASS_PDF_Report_EmailAddress</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;CASS&quot; &amp;&amp; ISPICKVAL(PDF_Report_Delivery_Format__c, &apos;E-mail and Download&apos;) &amp;&amp;  ISBLANK(PDF_File_Recipient_Email_1__c) &amp;&amp;  ISBLANK(PDF_File_Recipient_Email_2__c) &amp;&amp;  ISBLANK(PDF_File_Recipient_Email_3__c) &amp;&amp;  ISBLANK(PDF_File_Recipient_Email_4__c)</errorConditionFormula>
        <errorDisplayField>PDF_File_Recipient_Email_1__c</errorDisplayField>
        <errorMessage>Please enter at least one email address for the PDF report  email distribution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_CASS_Pay_Standard_Commission</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;CASS&quot; &amp;&amp; ISPICKVAL(Pay_Commission_to_agents__c, &apos;Yes&apos;) &amp;&amp; ISPICKVAL(Pay_Standard_Commission__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Pay_Standard_Commission__c</errorDisplayField>
        <errorMessage>Please indicate whether or not the Airline provides a standard commission to Agents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_CASS_Pay_Standard_Commission_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;CASS&quot; &amp;&amp; ISPICKVAL(Pay_Commission_to_agents__c, &apos;Yes&apos;) &amp;&amp; ISPICKVAL(Pay_Standard_Commission__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(Commission_Rate__c)</errorConditionFormula>
        <errorDisplayField>Commission_Rate__c</errorDisplayField>
        <errorMessage>Please indicate the standard commission rate (%) paid to Agents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_Canada_BSP_LocalVAT_Info</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;BSP&quot; &amp;&amp; ISPICKVAL(Case__r.BSPCountry__c, &apos;Canada&apos;) &amp;&amp;  ISPICKVAL(Canada_Has_Principal_Office__c, &apos;Yes&apos;) &amp;&amp;  ISBLANK(Canada_LocalVAT_Info__c)</errorConditionFormula>
        <errorDisplayField>Canada_LocalVAT_Info__c</errorDisplayField>
        <errorMessage>Please provide the GST/HST/QST information of your direct / principal office in Canada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_Canada_BSP_Province</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName==&quot;BSP&quot; &amp;&amp; ISPICKVAL(Case__r.BSPCountry__c, &apos;Canada&apos;) &amp;&amp;  ISPICKVAL(Canada_Has_Principal_Office__c, &apos;Yes&apos;) &amp;&amp;  ISPICKVAL(Canada_Provincial_Offices__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Canada_Provincial_Offices__c</errorDisplayField>
        <errorMessage>Please specify the provincial location of your direct / principal office in Canada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_Check_Flights_BSP_Concerned</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Online_carrier_in_the_BSP_country__c, &apos;Yes&apos;) &amp;&amp;    ISPICKVAL(Flights_operated_in_the_BSP_country__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Flights_operated_in_the_BSP_country__c</errorDisplayField>
        <errorMessage>Please indicate the flights the airline operates for the country concerned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_Check_IINET_Code</fullName>
        <active>true</active>
        <description>If HOT files delivery format is IINET then code must only be 4 chars.</description>
        <errorConditionFormula>(ISPICKVAL(Receive_HOT_files__c, &apos;YES - Daily&apos;) || ISPICKVAL(Receive_HOT_files__c, &apos;YES - Per Period&apos;))
&amp;&amp; ISPICKVAL(Hot_files_delivery_format__c,&apos;IINET&apos;)
&amp;&amp;
(
(ISNULL(IINET_account_number__c) || (LEN(IINET_account_number__c) &lt;&gt; 4))
)</errorConditionFormula>
        <errorDisplayField>IINET_account_number__c</errorDisplayField>
        <errorMessage>The iiNET Account number cannot be empty, and must be 4 characters long, in order to receive HOT files in the iiNET format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_HOT_File_Delivery_Format</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(RecordType.DeveloperName==&quot;BSP&quot;, OR(ISPICKVAL(Receive_HOT_files__c, &quot;YES - Daily&quot;), ISPICKVAL(Receive_HOT_files__c, &quot;YES - Per Period&quot;))),
AND(RecordType.DeveloperName==&quot;CASS&quot;, OR(ISPICKVAL(Receive_HOT_files__c, &quot;YES - Billing Period HOT&quot;), ISPICKVAL(Receive_HOT_files__c, &quot;YES - Remittance Period HOT&quot;)))
) &amp;&amp; ISPICKVAL(Hot_files_delivery_format__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Hot_files_delivery_format__c</errorDisplayField>
        <errorMessage>Please select the HOT file delivery format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AP_Joining_ICSS</fullName>
        <active>true</active>
        <description>Airlines must select whether or not thye will joing the ICCS before submitting</description>
        <errorConditionFormula>Submitted_to_IATA__c ==TRUE &amp;&amp;
OR(
                Case__r.Verification__c==&apos;BSP&apos;,
                Case__r.Verification__c==&apos;CASS Export&apos;,
                Case__r.Verification__c==&apos;CASS Import&apos;
) &amp;&amp;
OR(
                ISPICKVAL(Case__r.CaseArea__c, &apos;Airline Joining&apos;),
                ISPICKVAL(Case__r.Reason1__c, &apos;Bank Account Instructions&apos;)
)
&amp;&amp; ISPICKVAL(Airline_wish_to_join_ICCS__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Airline_wish_to_join_ICCS__c</errorDisplayField>
        <errorMessage>Please select whether or not you wish to join ICCS before submitting this application to IATA.</errorMessage>
    </validationRules>
</CustomObject>